force-app/main/default/objects/Authority__c/Authority__c.object-meta.xml
<CustomObject>
    <description>Local authority (tenant). Enables multiple authorities under one org, each with its own data, settings and AI credentials.</description>
    <label>רשות</label>
    <pluralLabel>רשויות</pluralLabel>
    <nameField>
        <label>שם הרשות</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>