force-app/main/default/objects/Authority__c/fields/AI_Engine__c.field-meta.xml
<CustomField>
    <fullName>AI_Engine__c</fullName>
    <label>AI Engine</label>
    <description>Per-authority AI engine: Agentforce or External. Falls back to the org default when blank.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>