force-app/main/default/objects/Authority__c/fields/LLM_API_Key__c.field-meta.xml
<CustomField>
    <fullName>LLM_API_Key__c</fullName>
    <label>LLM API Key</label>
    <description>Per-authority external LLM API key. For production prefer a Named/External Credential.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>