force-app/main/default/objects/Authority__c/fields/LLM_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>LLM_Endpoint__c</fullName>
    <label>LLM Endpoint</label>
    <type>Text</type>
    <length>255</length>
</CustomField>