force-app/main/default/objects/Authority__c/fields/LLM_Model__c.field-meta.xml
<CustomField>
    <fullName>LLM_Model__c</fullName>
    <label>LLM Model</label>
    <type>Text</type>
    <length>120</length>
</CustomField>