force-app/main/default/objects/Authority__c/fields/Public_Site_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Site_Base_Url__c</fullName>
    <label>Public Site Base URL</label>
    <description>Per-authority public form page base URL. Falls back to the org custom label when blank.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>